Put modal above fixed menu with z-index

--- a/src/components/postcard/_postcard.scss
+++ b/src/components/postcard/_postcard.scss
@@ -60,7 +60,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 3;
     padding-top: 70px;
     width: 100vw;
     height: 100vh;
